# huaweicloud-skills

./: README-CN.md  README.md  sync_skills.py
.github/workflows/: sync-skills.yml  sync.yml
skills/ai/modelarts/huawei-cloud-ascend-models-deploy/: SKILL.md
skills/ai/modelarts/huawei-cloud-ascend-op-mfu-calculator/: SKILL.md
skills/ai/modelarts/huawei-cloud-ascend-profiler-db-explorer/: SKILL.md
skills/ai/modelarts/huawei-cloud-ascend-remote-connect/: SKILL.md
skills/ai/modelarts/huawei-cloud-ascendc-operator-performance-optim/: SKILL.md
skills/ai/modelarts/huawei-cloud-msmodelslim-model-adapt/: SKILL.md
skills/ai/modelarts/huawei-cloud-msmodelslim-model-analysis/: SKILL.md
skills/ai/modelarts/huawei-cloud-msot-msopprof-operator-profiler/: SKILL.md
skills/bss/billing/huawei-cloud-billing-scout/: SKILL.md
skills/bss/billing/huawei-cloud-business-support-query/: SKILL.md
skills/computing/flexus-l/huawei-cloud-flexus-l-deploy-jiuwenswarm/: SKILL.md
skills/computing/flexus-l/huawei-cloud-flexus-l-server-hermes-deployment/: SKILL.md
skills/computing/flexus-l/huawei-cloud-flexus-l-server-manage/: SKILL.md
skills/computing/flexus-l/huawei-cloud-flexus-l-server-openclaw-deployment/: SKILL.md
skills/computing/flexus-l/huawei-cloud-flexus-l-server-openclaw-deployment/scripts/: caller.py  channels.py  deploy.py  gateway.py  lib.py  models.py  pyproject.toml  uniagent.py  utils.py
skills/computing/flexus-l/huawei-cloud-flexus-l-server-scripts-excute/: SKILL.md
skills/computing/ops/huawei-cloud-computing-query/: SKILL.md
(+237 files in other folders)
